Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7314

Cannot set an icon to a softkey item.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.6.2
    • 4.6.0
    • None
    • None
    • 94abb3ee93aa09f79640e14fed89b286c57ce05c 95012c3ca7ef52ea8f2a2ecb67987b8575758987

      Adding an icon to a QAction works is the QAction is added to a toolbar, but it does not work if the QAction is added to CBA.
      The same code does add the icon to the QMenu and QMenuBar in Linux.

      CWRT has a requirement to allow web developers to add icons to CBA.

        1. Shot.png
          48 kB
          Janne Anttila
        2. Shot(02).png
          64 kB
          Janne Anttila
        3. Shot(03).png
          63 kB
          Janne Anttila
        4. Shot(06).png
          156 kB
          Janne Anttila
        5. Shot(07).png
          156 kB
          Janne Anttila
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            e0101981 Janne Anttila
            yael Yael Aharon
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes